# ProjectInterkoneksi_SMARTINE

./: README.md  start_dev_env.js
Qt/: config.json  main.py
Qt/venv_coffee/: pyvenv.cfg
hardhat_sensor_contract/: package-lock.json  package.json
hardhat_sensor_contract/contracts/: SensorData.sol
hardhat_sensor_contract/scripts/: deploy.js
modbus_client/: Cargo.toml  incubation_start_date.txt
modbus_client/src/: main.rs
sensor_dapp_frontend/: package-lock.json  package.json  vite.config.js
sensor_dapp_frontend/public/: SensorData.json
sensor_dapp_frontend/src/: App.css  App.jsx
telur_tcp_server/: .env  Cargo.toml  build.rs
telur_tcp_server/src/: main.rs
